--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Khan Bank ltd. | Login</title>
+    <link rel="shortcut icon" href="Pics/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -13,7 +14,7 @@
 <body>
     <!-- website 1st page 'login area' -->
     <div id="login-area">
-        <h1 class="text-center">Welcome to <span id="bankName">Khan</span> Bank ltd.</h1>
+        <h1 class="text-center">Welcome to <span id="bankName"><b>Khan</b></span> Bank ltd.</h1>
         <div class="submit-area">
             <!-- login heading -->
             <h4>Login</h4>
@@ -34,29 +35,29 @@
 
     <!-- website 2nd page 'transaction area' -->
     <div id="transaction-area">
-         <!-- Transaction heading -->
+        <!-- Transaction heading -->
         <h1 class="text-center">Transaction <span id="transDetails">Details</span></h1>
         <!-- transaction column -->
-        <div class="row">
+        <div class="row" id="boxTransition">
             <!-- diposit box -->
             <div class="col-md-4">
                 <div class="deposit status">
                     <h5>Deposit</h5>
-                    <h2>$00</h2>
+                    <h2>$<span id="currentDeposit">00</span></h2>
                 </div>
             </div>
             <!-- withdraw box -->
             <div class="col-md-4">
                 <div class="withdraw status">
                     <h5>Withdraw</h5>
-                    <h2>$370</h2>
+                    <h2>$<span id="currentWithdraw">00</span></h2>
                 </div>
             </div>
             <!-- balance box -->
             <div class="col-md-4">
                 <div class="balance status">
                     <h5>Balance</h5>
-                    <h2>$2739</h2>
+                    <h2>$<span id="currentBalance">2739</span></h2>
                 </div>
             </div>
         </div>
@@ -67,10 +68,11 @@
             <div class="col-md-6">
                 <div class="submit-area">
                     <h4>Deposit</h4>
-                    <input type="text" class="form-control" placeholder="$ amount you want to deposit" >
+                    <input id="depositAmount" type="number" class="form-control"
+                        placeholder="$ amount you want to deposit">
                     <br>
                     <!-- deposit submit button -->
-                    <button class="btn btn-success">Deposit</button>
+                    <button id="addDeposit" class="btn btn-success">Submit</button>
                 </div>
             </div>
 
@@ -78,10 +80,11 @@
             <div class="col-md-6">
                 <div class="submit-area">
                     <h4>Withdraw</h4>
-                    <input type="text" class="form-control" placeholder="$ amount you want to withdraw" >
+                    <input id="withdrawAmount" type="number" class="form-control"
+                        placeholder="$ amount you want to withdraw">
                     <br>
                     <!-- deposit submit button -->
-                    <button class="btn btn-success">Withdraw</button>
+                    <button id="addWithdraw" class="btn btn-success">Submit</button>
                 </div>
             </div>
 
@@ -109,6 +112,60 @@
             const transactionArea = document.getElementById("transaction-area");
             transactionArea.style.display = "block";
         })
+        // deposit button event handler 
+        const depositBtn = document.getElementById("addDeposit");
+        depositBtn.addEventListener("click", function () {
+            const depositAmount = document.getElementById("depositAmount").value;
+            const depositNumber = parseFloat(depositAmount);
+            // const currentDeposit = document.getElementById("currentDeposit").innerText;
+            // const currentDepositNumber = parseFloat(currentDeposit);
+            // const totalDeposit = depositNumber + currentDepositNumber;
+            // console.log(totalDeposit);
+            // document.getElementById("currentDeposit").innerText = totalDeposit;
+            updateSpanText("currentDeposit", depositNumber);
+            // adding amount in balance section
+            // const currentBalance = document.getElementById("currentBalance").innerText;
+            // const currentBalanceNumber = parseFloat(currentBalance);
+            // const totalBalance = depositNumber+currentBalanceNumber;
+            // document.getElementById("currentBalance").innerText = totalBalance;
+            updateSpanText("currentBalance", depositNumber);
+
+
+
+            document.getElementById("depositAmount").value = "";
+        })
+
+        // withdraw button event handler
+        const withdrawBtn = document.getElementById("addWithdraw");
+        withdrawBtn.addEventListener("click", function () {
+            const withdrawNumber = getInputNumber("withdrawAmount");
+
+            updateSpanText("currentWithdraw", withdrawNumber);
+            updateSpanText("currentBalance", -1 * withdrawNumber);
+
+            document.getElementById("withdrawAmount").value = "";
+        })
+
+
+
+        function getInputNumber(id) {
+            const amount = document.getElementById(id).value;
+            const amountNumber = parseFloat(amount);
+            return amountNumber;
+        }
+
+
+        // calculation function 
+        function updateSpanText(id, depositNumber) {
+            const current = document.getElementById(id).innerText;
+            const currentNumber = parseFloat(current);
+            const totalAmount = depositNumber + currentNumber;
+            document.getElementById(id).innerText = totalAmount;
+
+        }
+
+
+
     </script>
 </body>
 
